fix: doctor profille overlapping issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -651,3 +651,8 @@ select {
     display: block !important;
   }
 }
+.card {
+  width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+}
